--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 spring.application.name=product-management-service
+
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/batch14_product_management
+spring.datasource.username=postgres
+spring.datasource.password=admin
+
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.ddl=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+jwt.secret-key=79005958352664416543180440800655
+server.port=8092
+server.servlet.context-path=/product-service
