Feign Client product

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 jwt.secret-key=79005958352664416543180440800655
 server.port=8092
 server.servlet.context-path=/product-service
+
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
